rns-lang/tests/snapshots/lexer-strings-unterminated_string_after_escape_with_newline.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String with backslash escape followed by newline \
.end
----- STDOUT -----

----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/lexer/strings/unterminated_string_after_escape_with_newline.ja:2:1 ]
   │
 2 │ "String with backslash escape followed by newline \
   │ ┬  
   │ ╰── String started here is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
