rns-lang/tests/snapshots/lexer-strings-unterminated_string_at_eof.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"This string has no closing quote
----- STDOUT -----

----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/lexer/strings/unterminated_string_at_eof.ja:2:1 ]
   │
 2 │ "This string has no closing quote
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
