rns-lang/tests/snapshots/parser-class_directive-header-name-dot_class_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public .class
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Expected class name but found directive
   ╭─[ test_data/integration/parser/class_directive/header/name/dot_class_as_class_name.ja:1:15 ]
   │
 1 │ .class public .class
   │               ───┬──  
   │                  ╰──── Found '.class' instead of a class name. The .class directive requires a class name after optional access flags.
   │ 
   │ Note: Directives like '.class' cannot be used as class names.
───╯
