rns-lang/tests/snapshots/parser-class_directive-header-name-dot_code_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public  .code
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Expected class name but found directive
   ╭─[ test_data/integration/parser/class_directive/header/name/dot_code_as_class_name.ja:1:16 ]
   │
 1 │ .class public  .code
   │                ──┬──  
   │                  ╰──── Found '.code' instead of a class name. The .class directive requires a class name after optional access flags.
   │ 
   │ Note: Directives like '.code' cannot be used as class names.
───╯
