rns-lang/tests/snapshots/parser-class_directive-header-name-method_descriptor_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public (II)V
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: expected class name
   ╭─[ test_data/integration/parser/class_directive/header/name/method_descriptor_as_class_name.ja:1:15 ]
   │
 1 │ .class public (II)V
   │               ──┬──  
   │                 ╰──── found '(II)V' instead
   │ 
   │ Note: Method descriptors cannot be used as class names. Please provide a class name like 'com/example/MyClass'.
───╯
